--- a/mobile/android/app/src/main/res/values/strings.xml
+++ b/mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Rotina de compartilhamento</string>
+    <string name="app_name">Rotina de Compartilhamento</string>
 </resources>
